--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "litst",
   "version": "0.0.1",
-  "description": "Life is too short to name litst.",
+  "description": "Litst is the tool to generate lifeistooshort.to website.",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel src -d dist",
     "start": "node dist/index.js",
     "dev-start": "npm run build && npm run start"
+  },
+  "bin": {
+    "litst": "./bin/litst"
   },
   "repository": {
     "type": "git",
