--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel src -d dist",
-    "start": "node dist/index.js",
+    "start": "./bin/litst",
     "dev-start": "npm run build && npm run start"
   },
   "bin": {
