--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel src -d dist",
     "start": "./bin/litst",
-    "dev-start": "npm run build && npm run start"
+    "dev-start": "npm run build && npm run start --"
   },
   "bin": {
     "litst": "./bin/litst"
@@ -23,7 +23,11 @@
   },
   "homepage": "https://github.com/imdreamrunner/litst#readme",
   "dependencies": {
-    "commander": "^2.19.0"
+    "commander": "^2.19.0",
+    "express": "^4.16.4",
+    "get-port": "^4.1.0",
+    "mz": "^2.7.0",
+    "showdown": "^1.9.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
